Bug 1083173 - Resume composition on compositor creation. r=kats, a=sledru